@@ -1,3 +1,9 @@
+2005-04-13  John Finlay  <finlay@moeraki.com>
+
+	* newsitems.py: Added tut 2.4 announcement
+
+	* tutorial.src: Updated date and rev number.
+
 2005-04-12  Christian Reis <kiko@async.com.br>
 
 	* head.src: Adding a link to our new Wiki!
